added basic middlewares for developent

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "An electronic e-commerce website built using Nodejs, express and MonngoDb",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
   },
   "author": "Rahib K V",
   "license": "ISC",
@@ -13,9 +15,11 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^8.3.3"
+    "mongoose": "^8.3.3",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "nodemon": "^3.1.0"
   }
 }
