--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "express": "^4.19.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.0",
+    "express-validator": "^7.0.1",
     "mongoose": "^8.3.3",
     "morgan": "^1.10.0",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
